--- a/index.html
+++ b/index.html
@@ -1,1 +1,174 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <style>
+        .p-albam{
+            display: flex;
+            flex-wrap: wrap;
+        }
 
+        .photo-frame{
+            width: 300px;
+            height: 200px;
+            border: 10px solid goldenrod;
+            position: relative;
+            margin: 10px;
+        }
+
+        .photo-frame .photo img{
+            width: 100%;
+        }
+
+        .photo-detail{
+            position: absolute;
+            width: 300px;
+            height: 200px;
+            top: 0;
+            display: none;
+        }
+        .photo-frame:hover .photo-detail{
+            display: block;
+            background-color: rgba(218, 165, 32,40%);
+        }
+
+        .photo-frame:hover .photo-detail h1{
+            color: white;
+            background-color: black;
+            text-align: center;
+        }
+
+        .photo-frame:hover .photo-detail p{
+            color: white;
+        }
+
+    </style>
+    
+
+</head>
+<body>
+    
+    <h1>My Photo Book</h1>
+    <section class="p-albam">
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+
+        <div class="photo-frame">
+            <div class="photo">
+                <img src="image/tiger.png" alt="">
+             </div>
+             <div class="photo-detail">
+                <h1>Royal Bengal Tiger</h1>
+                <p>The Bengal tiger is a population of the Panthera tigris tigris subspecies and the nominate tiger subspecies. It ranks among the biggest wild cats alive today. It is considered to belong to the world's charismatic megafauna.</p>
+             </div>
+        </div>
+
+    </section>
+
+
+</body>
+</html>
