--- a/index.html
+++ b/index.html
@@ -4,47 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .p-albam{
-            display: flex;
-            flex-wrap: wrap;
-        }
-
-        .photo-frame{
-            width: 300px;
-            height: 200px;
-            border: 10px solid goldenrod;
-            position: relative;
-            margin: 10px;
-        }
-
-        .photo-frame .photo img{
-            width: 100%;
-        }
-
-        .photo-detail{
-            position: absolute;
-            width: 300px;
-            height: 200px;
-            top: 0;
-            display: none;
-        }
-        .photo-frame:hover .photo-detail{
-            display: block;
-            background-color: rgba(218, 165, 32,40%);
-        }
-
-        .photo-frame:hover .photo-detail h1{
-            color: white;
-            background-color: black;
-            text-align: center;
-        }
-
-        .photo-frame:hover .photo-detail p{
-            color: white;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
     
 
 </head>
